Add js button to hide sidebar.

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <script src="script.js" defer></script>
 </head>
 <body>
+<button id="testButton">
+    Test
+</button>
 <div id="attachMenu">
 
 </div>
