Menu overlay improve.

--- a/index.html
+++ b/index.html
@@ -11,11 +11,13 @@
     <script src="script.js" defer></script>
 </head>
 <body>
-<button id="testButton">
-    Test
-</button>
-<div id="attachMenu">
+<div class="wrapper">
+    <button id="testButton">
+        Test
+    </button>
+    <div id="attachMenu">
 
+    </div>
 </div>
 <elements-api
         apiDescriptionUrl="https://raw.githubusercontent.com/stoplightio/studio-demo/master/reference/todos/todo.v1.yaml"
