--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
 <div class="wrapper">
     <button id="testButton">
-        Test
+        Open Menu
     </button>
     <div id="attachMenu">
 
