--- a/index.html
+++ b/index.html
@@ -13,25 +13,17 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </head>
 <body>
-<div class="menu-wrapper">
-    <button id="testButton">
-        Open Menu
-    </button>
-    <div class="accordion" id="accordionExample">
-        <div class="accordion-item">
-            <h2 class="accordion-header" id="headingTwo">
-                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#attachMenu" aria-expanded="false" aria-controls="collapseTwo">
-                    API navigation
-                </button>
-            </h2>
-            <div id="attachMenu" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
-            </div>
+<div class="d-flex">
+    <div class="menu">
+        <div class="back-button">
+            <a href="#" class="back-button--link">Catalog</a>
         </div>
+        <div id="attachMenu"></div>
     </div>
+    <elements-api
+            apiDescriptionUrl="https://raw.githubusercontent.com/stoplightio/studio-demo/master/reference/todos/todo.v1.yaml"
+            router="hash"
+    />
 </div>
-<elements-api
-        apiDescriptionUrl="https://raw.githubusercontent.com/stoplightio/studio-demo/master/reference/todos/todo.v1.yaml"
-        router="hash"
-/>
 </body>
 </html>
